HISTORY
--------

4.0.5 Fixed a bug signaled by David Goldstein: now you can use the name `f`
      as a keyword argument of decorated functions (2015/11/02)
4.0.4 Included a patch from Zev Benjamin: now decorated functions play well
     with cProfile (2015/09/25)
4.0.3 Added a warning about the memoize example, as requested by Robert
     Buchholz (2015/09/25)
4.0.2 docs/README.rst was not included in MANIFEST.in by accident,
     thus breaking the source installation (2015/07/28)
4.0.1 Added docs directory and upload_docs command. Fixed bug with
     `__qualname__`, reported by Lucian Petrut (2015/07/28)
4.0.0 Removed the need for 2to3 by dropping the support for Python 2.5.
     Added a MANIFEST.in file and produced a proper wheel. Improved
     the integration with setuptools so that `python setup.py test` works.
     Reworked the documentation and introduced `decorator.decorated`.
     Removed any dependence from `inspect.getargspec`, which is deprecated
     in Python 3.5, as signaled by Ralf Gommers.
     Fixed `contextmanager` to work with Python 3.5.
     Copied the `__qualname__` attribute, as requested by Frazer McLean.
     Added a `dispatch_on` facility to implement generic functions.
     (2015/07/24)
3.4.2 Same as 3.4.1, re-uploaded to PyPI (2015-03-22)
3.4.1 Ported the repository from GoogleCode to GitHub and added Travis CI
     support. Tests are executed with the new command `python test.py -v`.
     setuptools is now mandatory in Python 3. The suggested
     installation tool is now `pip`, not `easy_install`. Supported IronPython
     and other Python implementations without sys._getframe, as requested by
     Doug Blank (2015/03/16)
3.4.0 Added the ability to use classes and generic callables as callers and
     implemented a signature-preserving contexmanager decorator. Fixed a bug
     with the signature f(**kw) in Python 3 and fixed a couple of doctests
     broken by Python 3.3, both issues pointed out by Dominic Sacré (18/10/2012)